[gd_scene load_steps=13 format=3 uid="uid://b8by3l7huowxf"]

[ext_resource type="Script" path="res://game.gd" id="1_eptbd"]
[ext_resource type="Script" path="res://Player.gd" id="1_fncfr"]
[ext_resource type="SpriteFrames" uid="uid://d4hw23jkcogjx" path="res://player.tres" id="1_mitiy"]
[ext_resource type="TileSet" uid="uid://0c1gtpr6qqba" path="res://tiles.tres" id="3_0xvgc"]
[ext_resource type="AudioStream" uid="uid://b05rsqwlq1j1f" path="res://sounds/jump.wav" id="3_yfhaf"]
[ext_resource type="AudioStream" uid="uid://bdccw4oachao2" path="res://sounds/duck-jump.wav" id="4_55jde"]
[ext_resource type="Script" path="res://goal.gd" id="4_lg5ak"]
[ext_resource type="Script" path="res://Level1.gd" id="6_8rpnq"]
[ext_resource type="AudioStream" uid="uid://drwu858sbiavf" path="res://sounds/collect.wav" id="9_xadyk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1wjq"]
size = Vector2(32, 6)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4urxg"]
radius = 5.0
height = 14.0

[sub_resource type="Curve" id="Curve_kuyd2"]
max_value = 2.13163e-14
_data = [Vector2(0, 1), 0.0, -1.0, 0, 1, Vector2(1, 0), -1.0, 0.0, 1, 0]
point_count = 2

[node name="Game" type="Node2D"]
position = Vector2(17, 21)
script = ExtResource("1_eptbd")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -23.0
offset_right = 1019.0
offset_bottom = 128.0

[node name="Level1" type="TileMap" parent="."]
tile_set = ExtResource("3_0xvgc")
format = 2
layer_0/name = "platforms"
layer_0/tile_data = PackedInt32Array(720896, 262146, 0, 720898, 262146, 0, 720899, 262146, 0, 720901, 524290, 0, 851975, 589826, 0, 851976, 786434, 0, 851977, 851970, 0, 851978, 851970, 0, 851979, 851970, 0, 851980, 917506, 0, 524301, 65538, 0, 720909, 524290, 0, 851981, 524290, 1, 524302, 65538, 0, 524303, 65538, 0, 524304, 65538, 0, 524305, 65538, 0, 524306, 65538, 0, 524307, 131074, 0, 524308, 589826, 0, 327701, 262146, 0, 524309, 589826, 0, 327702, 262146, 0, 524310, 524290, 0, 327703, 262146, 0, 327704, 262146, 0, 851992, 589826, 0, 327705, 262146, 0, 851993, 786434, 3, 327706, 262146, 0, 851994, 851970, 3, 327707, 262146, 0, 851995, 851970, 3, 327708, 262146, 0, 851996, 851970, 3, 327709, 262146, 0, 851997, 851970, 3, 327710, 262146, 0, 851998, 917506, 3, 327711, 262146, 0, 327712, 327682, 0, 655392, 262146, 0, 655393, 327682, 0, 655394, 589826, 0, 655395, 524290, 1, 524325, 589826, 0, 524326, 786434, 0, 524327, 851970, 0, 524328, 851970, 0, 524329, 851970, 0, 524330, 851970, 0, 524331, 851970, 0, 524332, 917506, 0, 524333, 589826, 0, 524334, 589826, 0, 852014, 851970, 3, 983086, 524290, 0, 524335, 589826, 0, 852015, 917506, 3, 524336, 196610, 0, 852016, 589826, 0, 524337, 262146, 0, 852017, 589826, 0, 524338, 262146, 0, 852018, 589826, 0, 524339, 327682, 0, 852019, 524290, 1, 524340, 524290, 0, 852020, 458754, 1, 852021, 589826, 0, 852022, 786434, 0, 852023, 851970, 0, 852024, 851970, 0, 852025, 851970, 0, 589882, 65538, 0, 852026, 917506, 0, 589883, 65538, 0, 852027, 524290, 0, 589884, 65538, 0, 589885, 131074, 0, 917565, 589826, 0, 589886, 589826, 0, 917566, 589826, 0, 589887, 589826, 0, 917567, 196610, 0, 589888, 589826, 0, 917568, 327682, 0, 589889, 589826, 0, 917569, 589826, 0, 589890, 589826, 0, 917570, 524290, 0, 589891, 589826, 0, 393284, 262146, 0, 589892, 589826, 0, 393285, 262146, 0, 589893, 589826, 0, 393286, 262146, 0, 589894, 589826, 0, 393287, 327682, 0, 589895, 589826, 0, 393288, 524290, 0, 589896, 786434, 2, 720970, 196610, 0, 720971, 262146, 0, 720972, 262146, 0, 720973, 327682, 0, 720974, 524290, 1, 524368, 65538, 1, 524369, 131074, 0, 524370, 589826, 0, 524371, 589826, 0, 524372, 524290, 0, 262229, 851970, 0, 262230, 851970, 0, 720982, 589826, 0, 262231, 851970, 0, 720983, 589826, 0, 262232, 851970, 0, 720984, 589826, 0, 262233, 917506, 0, 720985, 589826, 0, 262234, 524290, 0, 720986, 589826, 0, 720987, 589826, 0, 458844, 917506, 3, 720988, 589826, 0, 720989, 589826, 0, 720990, 65538, 1, 720991, 65538, 0, 262240, 851970, 0, 720992, 65538, 0, 262241, 851970, 0, 720993, 65538, 0, 262242, 851970, 0, 720994, 131074, 0, 262243, 851970, 0, 720995, 524290, 0, 262244, 851970, 0, 262245, 917506, 0, 786533, 65538, 0, 262246, 524290, 0, 786534, 131074, 0, 524392, 589826, 0, 524393, 589826, 0, 524394, 196610, 0, 524395, 262146, 0, 524396, 262146, 0, 524397, 262146, 0, 524398, 262146, 0, 524399, 262146, 0, 524400, 262146, 0, 524401, 262146, 0, 524402, 262146, 0, 524403, 262146, 0, 524404, 262146, 0, 524405, 262146, 0, 524406, 327682, 0, 524407, 589826, 0, 524408, 589826, 0, 524409, 786434, 1, 524410, 851970, 1, 524411, 851970, 1, 524412, 917506, 1, 524413, 589826, 0, 786430, 196610, 0, 786431, 262146, 0, 786437, 589826, 1, 851973, 458754, 1, 851974, 589826, 0, 524299, 458754, 0, 589835, 589826, 1, 655371, 589826, 1, 720907, 458754, 1, 524300, 65538, 1, 720908, 589826, 0, 786445, 589826, 1, 327699, 196610, 0, 327700, 262146, 0, 589846, 589826, 1, 655382, 589826, 1, 720918, 589826, 1, 786454, 589826, 1, 851990, 458754, 1, 851991, 589826, 0, 655390, 196610, 0, 655391, 262146, 0, 524323, 458754, 0, 589859, 589826, 1, 524324, 589826, 0, 852012, 458754, 0, 917548, 589826, 1, 983084, 458754, 1, 852013, 786434, 3, 983085, 589826, 0, 786483, 458754, 0, 589876, 589826, 1, 655412, 589826, 1, 720948, 589826, 1, 786484, 786434, 2, 589880, 65538, 1, 589881, 65538, 0, 917563, 458754, 1, 917564, 589826, 0, 393282, 196610, 0, 983106, 589826, 1, 393283, 262146, 0, 852038, 786434, 3, 852039, 917506, 3, 458824, 589826, 1, 524360, 589826, 1, 655432, 589826, 1, 720968, 458754, 1, 720969, 589826, 0, 524366, 458754, 0, 589902, 589826, 1, 655438, 589826, 1, 524367, 589826, 0, 262227, 786434, 0, 262228, 851970, 0, 589908, 589826, 1, 655444, 589826, 1, 720980, 458754, 1, 720981, 589826, 0, 327770, 589826, 1, 393306, 589826, 1, 458842, 458754, 1, 458843, 786434, 3, 262238, 786434, 0, 262239, 851970, 0, 786531, 458754, 1, 786532, 65538, 1, 327782, 589826, 1, 393318, 589826, 1, 458854, 589826, 1, 524390, 458754, 1, 524391, 589826, 0, 720897, 262146, 0, 720900, 327682, 0)
layer_1/name = "collectibles"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(720902, 131074, 1, 327694, 131074, 1, 262173, 131074, 1, 262171, 131074, 1, 262169, 131074, 1, 262167, 131074, 1, 655387, 131074, 1, 524317, 131074, 1, 458783, 131074, 1, 196641, 131074, 1, 131106, 131074, 1, 65571, 131074, 1, 131109, 131074, 1, 196646, 131074, 1, 262183, 131074, 1, 262188, 131074, 1, 196653, 131074, 1, 196654, 131074, 1, 196655, 131074, 1, 262192, 131074, 1, 655405, 131074, 1, 720941, 131074, 1, 786477, 131074, 1, 720950, 131074, 1, 393273, 131074, 1, 327738, 131074, 1, 327739, 131074, 1, 393276, 131074, 1, 196675, 131074, 1, 196678, 131074, 1, 524359, 131074, 1, 524363, 131074, 1, 524365, 131074, 1, 327761, 131074, 1, 65621, 131074, 1, 65623, 131074, 1, 327772, 131074, 1, 393309, 131074, 1, 458846, 131074, 1, 524383, 131074, 1, 589920, 131074, 1, 655460, 131074, 1, 65632, 131074, 1, 65634, 131074, 1, 458860, 131074, 1, 458869, 131074, 1, 327795, 131074, 1, 327790, 131074, 1, 393337, 131074, 1, 589826, 131074, 1)
script = ExtResource("6_8rpnq")

[node name="goal" type="Area2D" parent="Level1"]
position = Vector2(978, 52)
script = ExtResource("4_lg5ak")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level1/goal"]
position = Vector2(6, 12)
shape = SubResource("RectangleShape2D_v1wjq")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(2, 76)
script = ExtResource("1_fncfr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-1, 1)
shape = SubResource("CapsuleShape2D_4urxg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
sprite_frames = ExtResource("1_mitiy")
animation = &"idle"

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-1, 2)
zoom = Vector2(7, 7)
limit_left = 0
limit_top = 0
limit_right = 1024
limit_bottom = 128
limit_smoothed = true
drag_horizontal_enabled = true
editor_draw_limits = true

[node name="JumpTimer" type="Timer" parent="Player"]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="CoyoteTime" type="Timer" parent="Player"]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="Poof" type="CPUParticles2D" parent="Player"]
position = Vector2(2.08165e-12, 7.62)
skew = 0.715585
emitting = false
lifetime = 0.1
speed_scale = 0.8
randomness = 0.5
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2(-2, 2.08165e-12)
spread = 20.9
gravity = Vector2(2.08165e-12, 2.08165e-12)
linear_accel_min = -3.3
linear_accel_max = -3.3
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_kuyd2")

[node name="JumpWAV" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("3_yfhaf")

[node name="SuperJumpWAV" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("4_55jde")

[node name="CollectWAV" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("9_xadyk")

[node name="Menu" type="Node2D" parent="."]
position = Vector2(0, 15)

[node name="Hud" type="Node2D" parent="."]
position = Vector2(-13, -16)

[node name="Label" type="Label" parent="Hud"]
offset_right = 40.0
offset_bottom = 23.0
text = "1"

[connection signal="body_entered" from="Level1/goal" to="Player" method="_on_goal_body_entered"]
